# application/api/swagger/swagger.yaml
@@ -494,7 +494,7 @@ paths:
           type: integer
         - name: aula_id
           in: path
-          description: Id do curso
+          description: Id da aula
           required: true
           type: integer
         - name: body
@@ -546,11 +546,72 @@ paths:
         "500":
           description: Internal Server Error
 
+  /curso/{curso_id}/matricular/{aluno_id}:
+    x-swagger-router-controller: curso_aluno
+    post:
+      tags:
+        - Matricula
+      description: Matricular Aluno
+      operationId: matricularAluno
+      parameters:
+        - name: curso_id
+          in: path
+          description: Id do curso
+          required: true
+          type: integer
+        - name: aluno_id
+          in: path
+          description: Id do aluno
+          required: true
+          type: integer
+      responses:
+        "200":
+          description: Success
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+
+#
+  /curso/{curso_id}/aluno:
+    x-swagger-router-controller: curso_aluno
+    get:
+      tags:
+        - Matricula
+      description: Listar Alunos Matriculados
+      operationId: alunoListar
+      parameters:
+        - name: curso_id
+          in: path
+          description: Id do curso
+          required: true
+          type: integer
+      responses:
+        "200":
+          description: Success
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+
   /swagger:
     x-swagger-pipe: swagger_raw
 
 # complex objects have schema definitions
 definitions:
+
   ProfessorRequest:
     type: object
     required:
@@ -558,17 +619,6 @@ definitions:
     properties:
       nome:
         type: string
-
-  CursoAlunoRequest:
-    type: object
-    required:
-      - aluno_id
-      - curso_id
-    properties:
-      aluno_id:
-        type: integer
-      curso_id:
-        type: integer
 
   AulaRequest:
     type: object
